fix: harden client JWT claim parsing against malformed payloads